--- a/PersonalBlog.WebUI/packages.config
+++ b/PersonalBlog.WebUI/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
+  <package id="Castle.Core" version="4.3.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="jQuery" version="1.10.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net461" />
@@ -10,5 +11,8 @@
   <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
+  <package id="Moq" version="4.10.1" targetFramework="net461" />
   <package id="Ninject" version="3.3.4" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net461" />
 </packages>
